okp-mcp/rhokp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhokp-server
  labels:
    app: rhokp
spec:
  type: ClusterIP
  selector:
    app: rhokp
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: solr
      port: 8983
      protocol: TCP
      targetPort: 8983
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
